# CCN-Data-Library

./: .gitignore  EMIT_focused_study.ipynb  README.md  exploration.ipynb  main.py  pyproject.toml  settings.cfg
EDA/: exploration.ipynb  (+2 more)
scripts/4_capstone/: .gitignore  NUL  README.md  TestRApp.R  exploration.ipynb  main.py  pyproject.toml  settings.cfg
scripts/4_capstone/EDA/: Report_methods.html  exploration.ipynb
scripts/4_capstone/EDA/Delphine/: Data_Inventory.ipynb
scripts/4_capstone/EDA/Kacper/Cores_ydata_reports/: ydata_report_Akther_et_al_2021_cores.html  ydata_report_Baustian_et_al_2021_cores.html  ydata_report_Beers_et_al_2023_cores.html  ydata_report_Bost_et_al_2024_cores.html  ydata_report_Cifuentes_et_al_2024_ElSalvador_cores.html  ydata_report_Craft_2024_cores.html  ydata_report_Curtis_et_al_2022_cores.html  ydata_report_Dai_et_al_2022_cores.html  ydata_report_Eagle_et_al_2021_cores.html  ydata_report_Engelbrecht_et_al_2025_Olifants_cores.html  ydata_report_Ensign_et_al_2020_cores.html  ydata_report_Everhart_et_al_2020_cores.html  ydata_report_Fell_et_al_2021_cores.html  ydata_report_Fl_bay_cores.html  ydata_report_Giblin_and_Forbrich_2018_cores.html  ydata_report_Gonneea_et_al_2018_cores.html  ydata_report_Hamzeh_and_Lahijani_2022_cores.html  ydata_report_Holmquist_2018_cores.html  ydata_report_Johnson_et_al_2007_cores.html  ydata_report_Johnson_et_al_2024_eelgrass_cores.html  ydata_report_Johnson_et_al_2024_marsh_cores.html  ydata_report_Krause_et_al_2025_cores.html  ydata_report_Krauss_et_al_2018_cores.html  ydata_report_Kusumaningtyas_et_al_2018_cores.html  ydata_report_Lafratta_et_al_2018_cores.html  ydata_report_Loomis_and_Craft_2024_cores.html  ydata_report_Luk_et_al_2020_cores.html  ydata_report_Machite_et_al_2024_cores.html  ydata_report_Marot_et_al_2020_cores.html  ydata_report_Maxwell_et_al_2023_cores.html  ydata_report_McGlathery_et_al_2018_cores.html  ydata_report_Miller_et_al_2022_cores.html  ydata_report_Ndhlovu_et_al_2025_cores.html  ydata_report_Noe_et_al_2016_cores.html  (+34 more)
scripts/4_capstone/EO/: Modeling_Dirty.ipynb  local_emit_extract.ipynb  server_emit_extract.ipynb
scripts/4_capstone/EO/catboost_info/: time_left.tsv
scripts/4_capstone/src/dashboard/: Python_Shiny.ipynb  README.md  dashboard_shared_dataset.py  data_inventory.py  map_helpers.py  map_panel.py  pygwalker_page.py  shiny_dashboard.py  table.py  table_helpers.py
scripts/4_capstone/src/interactive_dash/: README.md
(+333 files in other folders)
