[project]
name = "ccn-dashboard"
version = "0.1.0"
description = "Standalone Coastal Carbon Network data exploration and QA dashboard."
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "catboost>=1.2.10",
    "earthengine-api>=1.7.19",
    "fastexcel>=0.19.0",
    "geemap>=0.37.2",
    "geopandas>=1.1.2",
    "great-expectations>=1.11.1",
    "ipyleaflet>=0.20.0",
    "klib>=1.4.0",
    "lightgbm>=4.6.0",
    "optuna>=4.8.0",
    "pandera>=0.29.0",
    "perpetual>=2.1.0",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "pygwalker",
    "scikit-learn>=1.8.0",
    "scipy>=1.14.0",
    "shiny>=1.5.1",
    "shinywidgets>=0.7.1",
    "torch>=2.11.0",
    "xgboost>=3.2.0",
]

[tool.uv.sources]
pygwalker = { path = "src/interactive_dash", editable = true }

[project.scripts]
ccn-dashboard = "ccn_dashboard.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccn_dashboard"]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "isort>=7.0.0",
    "jupyterlab>=4.5.3",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "sweetviz>=2.3.1",
    "ydata-profiling>=4.18.1",
]

[tool.isort]
profile = "black"
