[project]
name = "4-capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "great-expectations>=1.11.1",
    "klib>=1.4.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pandera>=0.29.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "isort>=7.0.0",
    "jupyterlab>=4.5.3",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "sweetviz>=2.3.1",
]
